--- a/src/app/restaurant-detail/reviews/reviews.component.html
+++ b/src/app/restaurant-detail/reviews/reviews.component.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="box-body">
-        <p>{{ review.comments }}/p>
+        <p>{{ review.comments }} </p>
       </div>
     </div>
 
